Fixed bug in locating resources.